_cache/v0.18.0/pmix/specs.md
---
title: "pmix"
layout: cache
categories: [package, v0.18.0]
meta: {"versions": ["4.1.2"], "compilers": ["gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["ubuntu18.04"], "platforms": ["linux"], "targets": ["x86_64"], "stacks": ["data-vis-sdk", "e4s", "root", "tutorial"], "num_specs": 3, "num_specs_by_stack": {"tutorial": 2, "root": 3, "data-vis-sdk": 1, "e4s": 1}}
spec_details: [{"hash": "e4fax4744gqg222snd6da55c3xq3zu34", "compiler": "gcc@=7.5.0", "versions": ["4.1.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~docs", "+pmi_backwards_compatibility", "~restful"], "stacks": ["tutorial", "root", "data-vis-sdk"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/pmix-4.1.2/linux-ubuntu18.04-x86_64-gcc-7.5.0-pmix-4.1.2-e4fax4744gqg222snd6da55c3xq3zu34.spack"}, {"hash": "6ufltz3a7ebuso5xoesgziayits6jcvl", "compiler": "gcc@=8.4.0", "versions": ["4.1.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~docs", "+pmi_backwards_compatibility", "~restful"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/pmix-4.1.2/linux-ubuntu18.04-x86_64-gcc-8.4.0-pmix-4.1.2-6ufltz3a7ebuso5xoesgziayits6jcvl.spack"}, {"hash": "c76zwlcxrawwe43kzqqcyvwwsivbphzh", "compiler": "gcc@=7.5.0", "versions": ["4.1.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~docs", "+pmi_backwards_compatibility", "~restful"], "stacks": ["e4s", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/pmix-4.1.2/linux-ubuntu18.04-x86_64-gcc-7.5.0-pmix-4.1.2-c76zwlcxrawwe43kzqqcyvwwsivbphzh.spack"}]
---