_cache/v0.18.1/pmix/specs.md
---
title: "pmix"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["4.1.2"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "data-vis-sdk", "e4s", "root", "tutorial"], "num_specs": 7, "num_specs_by_stack": {"aws-isc": 2, "aws-ahug": 2, "root": 7, "aws-isc-aarch64": 2, "aws-ahug-aarch64": 2, "e4s": 1, "tutorial": 2, "data-vis-sdk": 1}}
spec_details: [{"hash": "wr7p32i56bimv5ce6nqgw4znou34rslc", "compiler": "gcc@=7.3.1", "versions": ["4.1.2"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["~docs", "+pmi_backwards_compatibility", "~restful"], "stacks": ["aws-isc", "aws-ahug", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/pmix-4.1.2/linux-amzn2-x86_64_v4-gcc-7.3.1-pmix-4.1.2-wr7p32i56bimv5ce6nqgw4znou34rslc.spack"}, {"hash": "mobruxxtnacwjtnhgfv7lpo7edom4x7k", "compiler": "gcc@=7.3.1", "versions": ["4.1.2"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["~docs", "+pmi_backwards_compatibility", "~restful"], "stacks": ["root", "aws-isc-aarch64", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/pmix-4.1.2/linux-amzn2-graviton2-gcc-7.3.1-pmix-4.1.2-mobruxxtnacwjtnhgfv7lpo7edom4x7k.spack"}, {"hash": "m3dqjet3h53rtvl2zzfl4vky5pzllwua", "compiler": "gcc@=7.3.1", "versions": ["4.1.2"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["~docs", "+pmi_backwards_compatibility", "~restful"], "stacks": ["root", "aws-isc-aarch64", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/pmix-4.1.2/linux-amzn2-aarch64-gcc-7.3.1-pmix-4.1.2-m3dqjet3h53rtvl2zzfl4vky5pzllwua.spack"}, {"hash": "55mfdngzvbrpwhapj56ugvqocb44dzgu", "compiler": "gcc@=7.3.1", "versions": ["4.1.2"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["~docs", "+pmi_backwards_compatibility", "~restful"], "stacks": ["aws-isc", "aws-ahug", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/pmix-4.1.2/linux-amzn2-x86_64_v3-gcc-7.3.1-pmix-4.1.2-55mfdngzvbrpwhapj56ugvqocb44dzgu.spack"}, {"hash": "c76zwlcxrawwe43kzqqcyvwwsivbphzh", "compiler": "gcc@=7.5.0", "versions": ["4.1.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~docs", "+pmi_backwards_compatibility", "~restful"], "stacks": ["root", "e4s"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/pmix-4.1.2/linux-ubuntu18.04-x86_64-gcc-7.5.0-pmix-4.1.2-c76zwlcxrawwe43kzqqcyvwwsivbphzh.spack"}, {"hash": "e4fax4744gqg222snd6da55c3xq3zu34", "compiler": "gcc@=7.5.0", "versions": ["4.1.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~docs", "+pmi_backwards_compatibility", "~restful"], "stacks": ["root", "tutorial", "data-vis-sdk"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/pmix-4.1.2/linux-ubuntu18.04-x86_64-gcc-7.5.0-pmix-4.1.2-e4fax4744gqg222snd6da55c3xq3zu34.spack"}, {"hash": "6ufltz3a7ebuso5xoesgziayits6jcvl", "compiler": "gcc@=8.4.0", "versions": ["4.1.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~docs", "+pmi_backwards_compatibility", "~restful"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/pmix-4.1.2/linux-ubuntu18.04-x86_64-gcc-8.4.0-pmix-4.1.2-6ufltz3a7ebuso5xoesgziayits6jcvl.spack"}]
---